--- a/a.ini
+++ b/a.ini
@@ -1,36 +1,58 @@
-#This is a test file
+﻿#This is a test file
+
+
 [test1]
-name = proto1
-location = /home/tatasky/ProcessMonitor/
+name = proto
+location = /home/tatasky/hari/ProcessMonitor
 priority = 1
-loglocation = /home/tatasky/ProcessMonitor
+loglocation = /home/tatasky/hari/ProcessMonitor
+argv = 4
+argc = "1  " 32 3 "asdsad"
+
+
 [test2]
-name = proto2
-location = /home/tatasky/ProcessMonitor/
+name = proto
+location = /home/tatasky/hari/ProcessMonitor
 priority = 1
-loglocation = /home/tatasky/ProcessMonitor
+loglocation = /home/tatasky/hari/ProcessMonitor
+argv = 4
+argc = "1  " 32 3 "asdsad"
+
+
 [test3]
-name = proto3
-location = /home/tatasky/ProcessMonitor/
+name = proto
+location = /home/tatasky/hari/ProcessMonitor
 priority = 1
-loglocation = /home/tatasky/ProcessMonitor
+loglocation = /home/tatasky/hari/ProcessMonitor
+argv = 4
+argc = "1  " 32 3 "asdsad"
+
+
 [test4]
-name = proto4
-location = /home/tatasky/ProcessMonitor/
+name = proto
+location = /home/tatasky/hari/ProcessMonitor
 priority = 1
-loglocation = /home/tatasky/ProcessMonitor
-#[test5]
-#name = proto5
-#location = /home/tatasky/ProcessMonitor/
-#priority = 1
-#loglocation = /home/tatasky/ProcessMonitor
-#[test6]
-#name = proto6
-#location = /home/tatasky/ProcessMonitor/
-#priority = 1
-#loglocation = /home/tatasky/ProcessMonitor
-#[test7]
-#name = proto7
-#location = /home/tatasky/ProcessMonitor/
-#priority = 1
-#loglocation = /home/tatasky/ProcessMonitor
+loglocation = /home/tatasky/hari/ProcessMonitor
+argv = 4
+argc = "1  " 32 3 "asdsad"
+
+
+[test5]
+name = proto
+location = /home/tatasky/hari/ProcessMonitor
+priority = 1
+loglocation = /home/tatasky/hari/ProcessMonitor
+argv = 4
+argc = "1  " 32 3 "asdsad"
+
+
+[a]
+name = proto
+location = /home/tatasky/hari/ProcessMonitor/
+loglocation = /etc/processd
+
+
+[bb]
+name = proto
+location = /home/tatasky/hari/ProcessMonitor/
+loglocation = /etc/processd
