--- a/processd_config.ini
+++ b/processd_config.ini
@@ -10,7 +10,7 @@
 //  name = binary
 //  location = /etc/
 //  loglocation = 
-//  argc = "1   " " 2 " 3 4 5   argc and argv should match
+//  argc = "1   " " 2 " 3 4 5   argc and argv should match, Else only argv arguments will be considered
 //  argv = 5
 //  priority = <1 - 10>         Highest priority is 1, Lowest is 10
 //
